--- a/QuequeTheme/Views/Home/Detail.cshtml
+++ b/QuequeTheme/Views/Home/Detail.cshtml
@@ -18,7 +18,7 @@
                 <a href="">我的订单</a><span>•</span>
                 <a asp-action="Login" id="LoginNav" asp-controller="Account">登录</a>
                 <a asp-action="Login" id="CenterNav" asp-controller="Account">个人中心</a>
-                <a href="javascript:Logout();" id="LogOutNac">退出 </a><span>•</span>
+                <a href="javascript:Logout();" id="LogOutNac">注销 </a><span>•</span>
             </div>
             <div class="clearfix"></div>
             <div class="top-offers show-mobile">
