--- a/QuequeTheme/Views/Account/Login.cshtml
+++ b/QuequeTheme/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "登录  缺缺作品";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div id="header">
@@ -62,8 +62,8 @@
                             <li class="menu-search-form">
                                 <a href="#" id="open-srch-form"><img src="~/02/images/srch.png" alt="srch"></a>
                             </li>
-                            <li><a href="#"><img src="~/02/images/pav.png" alt="pav"><span>2</span></a></li>
-                            <li><a href="#"><img src="~/02/images/bag.png" alt="bag"><span>2</span></a></li>
+                            <li><a asp-action="WishList" asp-controller="Shop"><img src="~/02/images/pav.png" alt="pav"><span>2</span></a></li>
+                            <li><a asp-action="CartList" asp-controller="Shop"><img src="~/02/images/bag.png" alt="bag"><span>2</span></a></li>
                             <li id="open-srch-form-mod">
                                 <div>
                                     <form class="side-search">
