--- a/QuequeTheme/Views/Home/Detail.cshtml
+++ b/QuequeTheme/Views/Home/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "商品详情";
+    ViewData["Title"] = "商品详情 缺缺作品";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model DetailViewModel
@@ -63,8 +63,8 @@
                             <li class="menu-search-form">
                                 <a href="#" id="open-srch-form"><img src="~/02/images/srch.png" alt="srch"></a>
                             </li>
-                            <li><a href="#"><img src="~/02/images/pav.png" alt="pav"><span>2</span></a></li>
-                            <li><a href="#"><img src="~/02/images/bag.png" alt="bag"><span>2</span></a></li>
+                            <li><a asp-action="WishList" asp-controller="Shop"><img src="~/02/images/pav.png" alt="pav"><span>2</span></a></li>
+                            <li><a asp-action="CartList" asp-controller="Shop"><img src="~/02/images/bag.png" alt="bag"><span>2</span></a></li>
                             <li id="open-srch-form-mod">
                                 <div>
                                     <form class="side-search">
@@ -280,13 +280,13 @@
                                 <p style="margin-top:20px">
                                     <label class="form-check-label" for="inlineCheckbox1">商品描述：</label> @if (@Model.Product.ShortDescribe == "")
                                     {
-                                        <strong style="color:#2F4056;font-size:14px">
-                                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non
+                                        <strong style="color:#808080;font-size:14px">
+                                            This is a short description of the goods, if the goods are not described, then you will see this sentence.
                                         </strong>
                                     }
                                     else
                                     {
-                                        <strong style="color:#2F4056;font-size:14px">
+                                        <strong style="color:#808080;font-size:14px">
                                             @Model.Product.ShortDescribe
                                         </strong>
                                     }
