--- a/QuequeTheme/Views/Home/Index.cshtml
+++ b/QuequeTheme/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "首页";
+    ViewData["Title"] = "首页 缺缺作品";
 }
 @model IndexViewModel
 
@@ -64,8 +64,8 @@
                                 <li class="menu-search-form">
                                     <a href="#" id="open-srch-form"><img src="~/02/images/srch.png" alt="srch"></a>
                                 </li>
-                                <li><a href="#"><img src="~/02/images/pav.png" alt="pav"><span>2</span></a></li>
-                                <li><a href="#"><img src="~/02/images/bag.png" alt="bag"><span>2</span></a></li>
+                                <li><a asp-action="WishList" asp-controller="Shop"><img src="~/02/images/pav.png" alt="pav"><span>2</span></a></li>
+                                <li><a asp-action="CartList" asp-controller="Shop"><img src="~/02/images/bag.png" alt="bag"><span>2</span></a></li>
                                 <li id="open-srch-form-mod">
                                     <div>
                                         <form class="side-search">
