--- a/QuequeTheme/Views/Shared/_Layout.cshtml
+++ b/QuequeTheme/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿ 
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -61,7 +61,7 @@
     <!-- //end-smooth-scrolling -->
     <style>
         #LogOutNac {
-           margin-left:16px
+            margin-left: 16px
         }
     </style>
 </head>
@@ -86,8 +86,7 @@
         </div><!-- Footer -->
     </div> <!-- wrapper -->
 
-
-
+  
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/layer/layer.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -102,14 +101,17 @@
     <script src="~/02/js/theme-script.js"></script>
 
     <script src="~/canvas-nest/canvas-nest.js" color="49,48,76" opacity='0.9' zIndex="-2" count="99"></script>
-
+    <script src="~/lib/jquery.cookie.js"></script>
     <!-- cart-js -->
     <script src="~/07/js/minicart.js"></script>
+    <script src="~/js/baseurl.js"></script>
+
     <script>
         $(function () {
-           
-            var token = sessionStorage.getItem("token");
-            if (token == null) {
+
+            var token = $.cookie("token");
+
+            if (token == "null") {
                 $("#CenterNav").hide();
                 $("#LogOutNac").hide();
             }
@@ -119,8 +121,17 @@
             }
         })
         function Logout() {
-            sessionStorage.removeItem("token");
-            location.href = "/Home/Index";
+            layer.confirm('确定要注销吗?', { icon: 3, title: '缺缺：' }, function (index) {
+                //do something
+                $.cookie("token", null, { path: '/' });
+
+                layer.msg("注销成功！", { icon: 1 }, function () {
+                    location.href = "/Home/Index";
+
+                })
+                layer.close(index);
+            });
+
         }
     </script>
     @RenderSection("Scripts", required: false)
