修改cookie判断 删除方法

--- a/QuequeTheme/Views/Shared/_Layout.cshtml
+++ b/QuequeTheme/Views/Shared/_Layout.cshtml
@@ -110,8 +110,13 @@
         $(function () {
 
             var token = $.cookie("token");
-
-            if (token == "null") {
+            if (token == undefined) {
+                $("#CenterNav").hide();
+                $("#LogOutNac").hide();
+                $("#LoginNav").show();
+               
+            }
+            else if (token == "null") {
                 $("#CenterNav").hide();
                 $("#LogOutNac").hide();
             }
