--- a/QuequeTheme/Views/Home/Index.cshtml
+++ b/QuequeTheme/Views/Home/Index.cshtml
@@ -58,8 +58,8 @@
                                 <li class="menu-search-form">
                                     <a href="#" id="open-srch-form"><img src="~/02/images/srch.png" alt="srch"></a>
                                 </li>
-                                <li><a asp-action="WishList" asp-controller="Shop"><img src="~/02/images/pav.png" alt="pav"><span>2</span></a></li>
-                                <li><a asp-action="CartList" asp-controller="Shop"><img src="~/02/images/bag.png" alt="bag"><span>2</span></a></li>
+                                <li><a asp-action="WishList" asp-controller="Shop"><img src="~/02/images/pav.png" alt="pav"><span id="WishCount"></span></a></li>
+                                <li><a asp-action="CartList" asp-controller="Shop"><img src="~/02/images/bag.png" alt="bag"><span id="CartCount"></span></a></li>
                                 <li id="open-srch-form-mod">
                                     <div>
                                         <form class="side-search">
