添加计数功能

--- a/QuequeTheme/Views/Home/Detail.cshtml
+++ b/QuequeTheme/Views/Home/Detail.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "商品详情 缺缺作品";
+    ViewData["Title"] = "商品详情 ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model DetailViewModel
@@ -277,7 +277,7 @@
                                 }
                                 else
                                 {
-                                    <p style="margin-top:20px;font-size:12px;color:#808080"> <label class="form-check-label" for="inlineCheckbox1">该商品由<strong style="color:#000000;font-size:14px;"> 缺缺商城 </strong> 提供！</label></p>
+                                    <p style="margin-top:20px;font-size:12px;color:#808080"> <label class="form-check-label" for="inlineCheckbox1">该商品由<strong style="color:#000000;font-size:14px;"> 炸天帮商城 </strong> 提供！</label></p>
 
                                 }
 
@@ -310,7 +310,7 @@
                                     <div class="custom-control custom-radio custom-control-inline">
                                         <label class="form-check-label" for="inlineCheckbox1">选择尺码：</label>
 
-                                        <input type="radio" id="Size" name="Size" value="M" class="custom-control-input">
+                                        <input type="radio" id="Size" name="Size" checked="checked" value="M" class="custom-control-input">
                                         <label class="custom-control-label" for="Size" style="color:#2F4056">M</label>
 
                                         <input type="radio" id="Size" name="Size" value="X"  class="custom-control-input">
