--- a/QuequeTheme/Views/Shop/CartList.cshtml
+++ b/QuequeTheme/Views/Shop/CartList.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "购物车 缺缺作品";
+    ViewData["Title"] = "购物车 ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model CartViewModel
@@ -207,7 +207,7 @@
 
 <div class="container">
     <div class="page-header">
-        <h1>缺缺商城 <small>购物车：</small></h1>
+        <h1>炸天帮 <small>购物车：</small></h1>
     </div>
     <div class="table-responsive ">
         <table class="table table-hover ">
