--- a/QuequeTheme/Views/Account/Login.cshtml
+++ b/QuequeTheme/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "登录  缺缺作品";
+    ViewData["Title"] = "登录 ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
     <div id="header">
