--- a/QuequeTheme/Views/Account/Login.cshtml
+++ b/QuequeTheme/Views/Account/Login.cshtml
@@ -16,7 +16,7 @@
                 <div class="top-control " style="font-size:16px">
                     @*<a href="">我的订单</a><span>•</span>*@
                     <a asp-action="Login" id="LoginNav" asp-controller="Account">登录</a>
-                    <a asp-action="Index" id="CenterNav" asp-controller="Admin">欢迎您!<span id="NickNameNav" style=" color:white"></span> </a>
+                    <a asp-action="Index" id="CenterNav" asp-controller="Admin"><span id="NickNameNav" style=" color:white"></span> 的控制台</a>
                     <a href="javascript:Logout();" id="LogOutNac">注销 </a><span>•</span>
                 </div>
 
@@ -209,7 +209,7 @@
                 <span class="input input--nao">
                     <input class="input__field input__field--nao" type="text" id="EmailLogin" autocomplete="off" />
                     <label class="input__label input__label--nao" for="input-2">
-                        <span class="input__label-content input__label-content--nao">邮箱：</span>
+                        <span class="input__label-content input__label-content--nao">邮箱</span>
                     </label>
                     <svg class="graphic graphic--nao" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                         <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0" />
@@ -220,7 +220,7 @@
                 <span class="input input--nao">
                     <input class="input__field input__field--nao" type="password" id="PasswordLogin" />
                     <label class="input__label input__label--nao" for="input-2">
-                        <span class="input__label-content input__label-content--nao">密码：</span>
+                        <span class="input__label-content input__label-content--nao">密码</span>
                     </label>
                     <svg class="graphic graphic--nao" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                         <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0" />
