--- a/QuequeTheme/Views/Admin/Index.cshtml
+++ b/QuequeTheme/Views/Admin/Index.cshtml
@@ -21,7 +21,21 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link href="~/AdminLTE-2.1.1/dist/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
- 
+    <link rel="icon" href="https://static.jianshukeji.com/hcode/images/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/highcharts.css" />
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery.cookie.js"></script>
+    <script src="https://code.highcharts.com.cn/highcharts/highcharts.js"></script>
+    <script src="~/Highcharts/exporting.js"></script>
+    <script src="https://code.highcharts.com.cn/highcharts/modules/oldie.js"></script>
+    <script src="~/js/baseurl.js"></script>
+
+    <script src="~/layer/layer.js"></script>
+    <script src="~/js/admin.js"></script>
+    <style>
+        /* css 代码  */
+    </style>
 </head>
 <body class="skin-blue sidebar-mini">
 
@@ -30,7 +44,7 @@
 
         <header class="main-header">
             <!-- 后台模板名称-->
-            <a href="index2.html" class="logo">
+            <a href="/Home/Index" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>缺</b>商</span>
                 <!-- logo for regular state and mobile devices -->
@@ -41,6 +55,7 @@
                 <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                     <span class="sr-only">展开/收回</span>
                 </a>
+
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
                         <!-- 信息-->
@@ -86,13 +101,13 @@
                                 <li>
                                     <!-- inner menu: contains the actual data -->
                                     <ul class="menu">
-                                      
+
                                         @foreach (var item in Model.LogMessages)
                                         {
 
                                             <li>
                                                 <a href="javascript:AlertMsg('@item.Content');">
-                                                    <i class="fa fa-envelope-o text-blue"></i> @item.Content  <span style="color:lightsteelblue;font-size:10px">@item.CreateTime.ToShortDateString() @item.CreateTime.ToShortTimeString()</span>
+                                                    <i class="fa fa-volume-up text-blue"></i> @item.Content  <span style="color:lightsteelblue;font-size:10px">@item.CreateTime.ToShortDateString() @item.CreateTime.ToShortTimeString()</span>
                                                 </a>
                                             </li>
                                         }
@@ -137,16 +152,16 @@
                                 </li>
                                 <!-- Menu Body -->
                                 @*<li class="user-body">
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">修改资料</a>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">更改密码</a>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">联系作者</a>
-                                        </div>
-                                    </li>*@
+                                    <div class="col-xs-4 text-center">
+                                        <a href="#">修改资料</a>
+                                    </div>
+                                    <div class="col-xs-4 text-center">
+                                        <a href="#">更改密码</a>
+                                    </div>
+                                    <div class="col-xs-4 text-center">
+                                        <a href="#">联系作者</a>
+                                    </div>
+                                </li>*@
                                 <!-- Menu Footer-->
                                 <!-- 按钮事件-->
                                 <li class="user-footer">
@@ -390,11 +405,183 @@
 
         <!-- 内容区域 -->
         <div class="content-wrapper">
+            <!-- 页面标题 -->
+            <section class="content-header">
+                <h1>
+                    仪表盘
+                    <small>欢迎您！@Model.UserDto.NickName</small>
+                </h1>
+            </section>
 
+            <!-- 内容 -->
+            <section class="content">
+                <!-- 信息框 -->
+                <div class="row">
+                    @foreach (var item in Model.CommonDatas)
+                    {
+                        if (item.Type == "Order")
+                        {
+                            <div class="col-lg-3 col-xs-6">
+                                <!-- small box -->
+                                <div class="small-box bg-aqua">
+                                    <div class="inner">
+                                        <h3>@item.Value</h3>
+                                        <p>购物成交</p>
+                                    </div>
+                                    <div class="icon">
+                                        <i class="ion ion-bag"></i>
+                                    </div>
+                                    <a href="javascript:Money()" class="small-box-footer">打赏 <i class="fa fa-arrow-circle-right"></i></a>
+                                </div>
+                            </div><!-- ./col -->
+
+                        }
+                        else if (item.Type == "Wish")
+                        {
+                            <div class="col-lg-3 col-xs-6">
+                                <!-- small box -->
+                                <div class="small-box bg-green">
+                                    <div class="inner">
+                                        <h3>@item.Value </h3>
+                                        <p>收藏</p>
+                                    </div>
+                                    <div class="icon">
+                                        <i class="ion ion-ios-heart"></i>
+                                    </div>
+                                    <a href="javascript:JueJin()" class="small-box-footer">博客 <i class="fa fa-arrow-circle-right"></i></a>
+
+                                </div>
+                            </div><!-- ./col -->
+
+                        }
+                        else if (item.Type == "User")
+                        {
+                            <div class="col-lg-3 col-xs-6">
+                                <!-- small box -->
+                                <div class="small-box bg-yellow">
+                                    <div class="inner">
+                                        <h3>@item.Value</h3>
+                                        <p>用户数量</p>
+                                    </div>
+                                    <div class="icon">
+                                        <i class="ion ion-person-add"></i>
+                                    </div>
+                                    <a href="javascript:QQ()" class="small-box-footer">QQ <i class="fa fa-arrow-circle-right"></i></a>
+
+                                </div>
+                            </div><!-- ./col -->
+
+                        }
+                        else
+                        {
+                            <div class="col-lg-3 col-xs-6">
+                                <!-- small box -->
+                                <div class="small-box bg-red">
+                                    <div class="inner">
+                                        <h3>@item.Value</h3>
+                                        <p>网站访问总量</p>
+                                    </div>
+                                    <div class="icon">
+                                        <i class="ion ion-stats-bars"></i>
+                                    </div>
+                                    <a href="javascript:Qun()" class="small-box-footer">QQ群 <i class="fa fa-arrow-circle-right"></i></a>
+
+                                </div>
+                            </div><!-- ./col -->
+
+                        }
+                    }
+                </div><!-- 信息框-->
+                <div class="row">
+
+                    <!--统计图-->
+                    <div id="container" class="col-lg-9" style=" margin-top:16px;height:406px "></div>
+                    <script>
+                        var token = $.cookie("token");
+                        $.ajax({
+                            url: urlBase + '/api/admin/chart',
+
+                            type: 'get',
+                            headers: { "Authorization": "Bearer " + token },
+                            contentType: 'application/json',
+                            success: function (res) {
+                                console.log(res)
+                                var arr = [];
+                                $(res).each(function () {
+                                    if (this.id == 31) {
+                                        arr.push([this.name, this.count, true, true]);
+
+                                    } else {
+                                        arr.push([this.name, this.count, false]);
+
+                                    }
+                                });
+                                arr.push(['其他', 1, false]);
+
+                                Highcharts.chart('container', {
+                                    chart: {
+                                        styledMode: false
+                                    },
+                                    title: {
+                                        text: '产品最新销售情况'
+                                    },
+                                    xAxis: {
+                                        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+                                    },
+                                    series: [{
+                                        type: 'pie',
+                                        allowPointSelect: true,
+                                        keys: ['name', 'y', 'selected', 'sliced'],
+                                        data: arr,
+                                        showInLegend: true
+                                    }]
+                                });   // JS 代码
+                            }
+                        }).fail(function () {
+                        });
+
+                    </script>
+
+                    <!--右侧通知-->
+                    <div class="col-md-3" style=" margin-top:12px;height:409px;overflow:auto">
+                        <div class="box box-default">
+                            <div class="box-header with-border">
+                                <i class="fa fa-bullhorn"></i>
+                                <h3 class="box-title">缺缺通知：</h3>
+                            </div><!-- /.box-header -->
+                            <div class="box-body">
+                                <div class="callout callout-danger">
+                                    <h4>缺缺想说：</h4>
+                                    <p>如果你想要这个模板的话，可以联系我哦！QQ：3393597524。</p>
+                                </div>
+                                <div class="callout callout-info">
+                                    <h4>缺缺想说：</h4>
+                                    <p>如果你想要项目源码的话，可以联系我哦！QQ：3393597524。EF 迁移，直接就可以运行！！！</p>
+                                </div>
+                                <div class="callout callout-warning">
+                                    <h4>缺缺想说：</h4>
+                                    <p>你不能拥有的，别人替你拥有，所以努力吧！</p>
+                                </div>
+                                <div class="callout callout-success">
+                                    <h4>缺缺想说：</h4>
+                                    <p>如果未来是痛苦的，我会竭力避免眼前的快乐；如果未来是快乐的，我会竭力忍受现在的痛苦！</p>
+                                </div>
+                            </div><!-- /.box-body -->
+                        </div><!-- /.box -->
+                    </div>
+                </div>
+            </section><!-- /.content -->
         </div><!-- /.content-wrapper -->
+        <img id="Money" width="410" style="display:none" src="~/Img/money.jpg" />
+        <img id="QQ" width="410" style="display:none" src="~/Img/qq.png" />
+        <div id="JueJin" style="display:none;background-color:#F5F6FA">
+            <a target="_Blank" href="http://juejin.im/user/5d6a5a57e51d453bb13b666b"><img width="410" src="~/Img/Juejin.jpg" /></a>
+            <p style="margin:12px auto; font-size:20px"> <a target="_Blank" href="http://juejin.im/user/5d6a5a57e51d453bb13b666b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;跟我一起在掘金学习最新技术吧~掘金</a></p>
+        </div>
+        <img id="Qun" width="410" style="display:none" src="~/Img/qqqun.png" />
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
-                <b>Version</b> 2.0
+                <b>Version</b> 1.0
             </div>
             <strong>Copyright &copy; 2020 <a href="http://beian.miit.gov.cn">晋ICP备20002472号-1</a>.</strong> 缺缺作品
         </footer>
@@ -415,8 +602,6 @@
         <div class='control-sidebar-bg'></div>
     </div><!-- ./wrapper -->
     <!-- jQuery 2.1.4 -->
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
     <!-- jQuery UI 1.11.2 -->
     <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js" type="text/javascript"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
@@ -426,11 +611,9 @@
     <script src="~/AdminLTE-2.1.1/dist/js/app.min.js" type="text/javascript"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="~/AdminLTE-2.1.1/dist/js/demo.js" type="text/javascript"></script>
-    <script src="~/lib/jquery.cookie.js"></script>
-    <script src="~/layer/layer.js"></script>
-    <script src="~/js/baseurl.js"></script>
 
-    <script src="~/js/admin.js"></script>
+    <script src="~/canvas-nest/canvas-nest.js" color="49,48,76" opacity='0.9' zIndex="1" count="36"></script>
+
 </body>
 
 </html>
