--- a/QuequeTheme/Views/Home/Index.cshtml
+++ b/QuequeTheme/Views/Home/Index.cshtml
@@ -15,10 +15,10 @@
                     <li><a href=""><i style=" color:white" class="fa fa-envelope-square"></i><span>3393597524@qq.com</span></a></li>
                 </ul>
              
-                <div class="top-control " style="font-size:16px">
+                <div class="top-control " style="font-size:16px;" >
                     @*<a href="">我的订单</a><span>•</span>*@
                     <a asp-action="Login" id="LoginNav" asp-controller="Account">登录</a>
-                    <a asp-action="Index" id="CenterNav" asp-controller="Admin">欢迎您!<span id="NickNameNav" style=" color:white"></span> </a>
+                    <a asp-action="Index" id="CenterNav" asp-controller="Admin"><span id="NickNameNav" style=" color:white"></span> 的控制台 </a>
                     <a href="javascript:Logout();" id="LogOutNac">注销 </a><span>•</span>
                 </div>
                 
