--- a/QuequeTheme/Views/Home/Index.cshtml
+++ b/QuequeTheme/Views/Home/Index.cshtml
@@ -316,7 +316,7 @@
                                             <div class="product-fade-wrap">
                                                 <div id="product-image">
                                                     @*图片*@
-                                                    <div class="item"><img src="@item.Pictrue" alt="" class="img-responsive"></div>
+                                                   <img src="@item.Pictrue" style="height:282px" alt="" class="img-responsive">
                                                 </div>
                                                 <div class="product-fade-ct">
                                                     <div class="product-fade-control">
@@ -362,12 +362,12 @@
                             <div class="row " style="display:flex;flex-wrap:wrap">
                                 @foreach (var item in Model.NewProducts)
                                 {
-                                    <div class="col-md-3 prdct-grid">
+                                    <div class="col-md-3 prdct-grid" >
                                         <div class="product-fade">
                                             <div class="product-fade-wrap">
                                                 <div id="product-image">
                                                     @*图片*@
-                                                    <div class="item"><img src="@item.Pictrue" alt="" class="img-responsive"></div>
+                                                     <img src="@item.Pictrue" style="height:282px"  alt="" class="img-responsive"> 
                                                 </div>
                                                 <div class="product-fade-ct">
                                                     <div class="product-fade-control">
@@ -417,7 +417,7 @@
                                             <div class="product-fade-wrap">
                                                 <div id="product-image">
                                                     @*图片*@
-                                                    <div class="item"><img src="@item.Pictrue" alt="" class="img-responsive"></div>
+                                                     <img src="@item.Pictrue" style="height:282px" alt="" class="img-responsive"> 
                                                 </div>
                                                 <div class="product-fade-ct">
                                                     <div class="product-fade-control">
